# mbed-os

./: .gitignore
connectivity/drivers/ble/FEATURE_BLE/: CommonHCIDriver.cpp
connectivity/drivers/emac/TARGET_STM/: stm32xx_emac.cpp
connectivity/lwipstack/: mbed_lib.json
connectivity/lwipstack/source/: LWIPInterface.cpp  LWIPInterfaceEMAC.cpp
connectivity/mbedtls/source/: ecdh.c
connectivity/netsocket/include/netsocket/: TLSSocketWrapper.h
connectivity/netsocket/source/: TLSSocketWrapper.cpp
drivers/source/: SerialBase.cpp  Watchdog.cpp
features/frameworks/mbed-client-cli/source/: ns_cmdline.c
storage/blockdevice/COMPONENT_QSPIF/source/: QSPIFBlockDevice.cpp
storage/blockdevice/COMPONENT_SD/: mbed_lib.json
storage/blockdevice/COMPONENT_SPIF/: mbed_lib.json
storage/blockdevice/source/: SFDP.cpp
targets/: CMakeLists.txt  targets.json
targets/TARGET_RASPBERRYPI/TARGET_RP2040/: .mbedignore  CMakeLists.txt  USBPhy_RP2040.cpp  i2c_api.c  pwmout_api.c  rtc_api.c  serial_api.c  spi_api.c  trng_api.c  watchdog_api.c
targets/TARGET_STM/: USBPhy_STM32.cpp  can_api.c  lp_ticker.c  pwmout_api.c  rtc_api.c
targets/TARGET_STM/TARGET_STM32H7/: analogin_device.c
targets/TARGET_STM/TARGET_STM32H7/TARGET_STM32H747xI/TARGET_OPTA/: CMakeLists.txt  system_clock_override.c
targets/TARGET_STM/TARGET_STM32H7/TARGET_STM32H747xI/TARGET_OPTA/COMPONENT_WHD/port/: cyhal_gpio.cpp  cyhal_sdio.c  wiced_filesystem.cpp
targets/TARGET_STM/TARGET_STM32H7/TARGET_STM32H747xI/TARGET_PORTENTA_X8/: CMakeLists.txt
targets/TARGET_STM/tools/: STM32_gen_PeripheralPins.py
(+83 files in other folders)
